--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
