--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Najeeb Patoana",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "datatables.net": "^2.0.8",
